Worked out  a layout

--- a/index.html
+++ b/index.html
@@ -1,3 +1,52 @@
+ <!DOCTYPE html>
+
+<head>
+    <title>Calculator App</title>
+    <link href="https://fonts.googleapis.com/css?family=Bellefair" rel="stylesheet">
+	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css.css" />
+</head>
+ <body>
+	
+	<div id="display"> </div>
+	
+	<table>
+		<tr>
+			<th> 7 </th>
+			<th> 8 </th>
+			<th> 9 </th> 
+			<th> ( </th>
+			<th> + </th>
+			<th> C </th>
+		</tr>
+		<tr>
+			<th> 4 </th>
+			<th> 5 </th>
+			<th> 6 </th> 
+			<th> < </th>
+			<th> - </th>
+			<th> Del </th>
+		</tr>
+		<tr>
+			<th> 1 </th>
+			<th> 2 </th>
+			<th> 3 </th> 
+			<th> > </th>
+			<th> . </th>
+			<th> = </th>
+		</tr>
+		<tr>
+			<th> 0 </th>
+			<th> . </th>
+			<th> +/- </th> 
+			<th> ) </th>
+			<th> % </th>
+			<th> ^ </th>
+		</tr>
+	</table>
+	
+	
+ <!--
 <div id="all">
 <p id="output">0</output>
 
@@ -17,7 +66,7 @@
    <button onclick="addDigit(0)"> 0 </button>
 
    <button onclick="makeNewNumberSpace('.')"> . </button>
-   <button onclick="makeNewNumberSpace('-')" > - </button>
+   <button onclick="makeNewNumberSpace('-')" > +/- </button>
 </div>
 <br />
 <div id="commands">
@@ -33,4 +82,11 @@
 <button onclick="clearCurrent()"> CE </button>
 <button onclick="del()"> Del </button>
 </div>
-</div<
+</div>
+ -->
+ <script type="text/javascript" src=" https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+ <script type="text/javascript" src="data.js"></script>
+</body> 
+
+
