--- a/index.html
+++ b/index.html
@@ -12,25 +12,25 @@
 	
 	<table>
 		<tr>
-			<th> 7 </th>
-			<th> 8 </th>
-			<th> 9 </th> 
+			<th><button onclick="addDigit(7)"> 7 </button></th>
+			<th><button onclick="addDigit(8)"> 8 </button></th>
+			<th><button onclick="addDigit(9)"> 9 </button></th> 
 			<th> ( </th>
 			<th> + </th>
 			<th> C </th>
 		</tr>
 		<tr>
-			<th> 4 </th>
-			<th> 5 </th>
-			<th> 6 </th> 
+			<th><button onclick="addDigit(4)"> 4 </button></th>
+			<th><button onclick="addDigit(5)"> 5 </button></th>
+			<th><button onclick="addDigit(6)"> 6 </button></th> 
 			<th> < </th>
 			<th> - </th>
 			<th> Del </th>
 		</tr>
 		<tr>
-			<th> 1 </th>
-			<th> 2 </th>
-			<th> 3 </th> 
+			<th><button onclick="addDigit(1)"> 1 </button></th>
+			<th><button onclick="addDigit(2)"> 2 </button></th>
+			<th><button onclick="addDigit(3)"> 3 </button></th> 
 			<th> > </th>
 			<th> . </th>
 			<th> = </th>
