--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<th><button onclick="addDigit(4)"> 4 </button></th>
 			<th><button onclick="addDigit(5)"> 5 </button></th>
 			<th><button onclick="addDigit(6)"> 6 </button></th> 
-			<th> < </th>
+			<th><button class="fa fa-arrow-left"></button></th>
 			<th> <button onclick="addOperator( '-' )">  - </button></th>
 			<th> Del </th>
 		</tr>
@@ -31,15 +31,15 @@
 			<th><button onclick="addDigit(1)"> 1 </button></th>
 			<th><button onclick="addDigit(2)"> 2 </button></th>
 			<th><button onclick="addDigit(3)"> 3 </button></th> 
-			<th> > </th>
+			<th> <button class="fa fa-arrow-right"></button> </th>
 			<th> <button onclick="addOperator( '*' )"> * </button></th>
-			<th> = </th>
+			<th> <button onclick="equate()"> = </button> </th>
 		</tr>
 		<tr>
 			<th><button onclick="addDigit(0)"> 0 </button></th>
 			<th> . </th>
 			<th> +/- </th> 
-			<th> ) </th>
+			<th>  <button onclick="addOperator( ')' )"> ) </button></th>
 			<th> <button onclick="addOperator( '/' )"> / </button></th>
 			<th> ^ </th>
 		</tr>
