--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</tr>
 		<tr>
 			<th><button onclick="addDigit(0)"> 0 </button></th>
-			<th> . </th>
+			<th> <button  onclick="addOperator('.')">.</button> </th>
 			<th> +/- </th> 
 			<th> <button onclick="addOperator( '*' )"> * </button></th>
 			<th> <button onclick="addOperator( '/' )"> / </button></th>
