Change Signs functionality works

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
 		<tr>
 			<th><button onclick="addDigit(0)"> 0 </button></th>
 			<th> <button  onclick="addDecimal()">.</button> </th>
-			<th> +/- </th> 
+			<th> <button onclick="changeSigns()"> +/- </button> </th> 
 			<th> <button onclick="addOperator( '*' )"> * </button></th>
 			<th> <button onclick="addOperator( '/' )"> / </button></th>
-			<th>  <button onclick="addOperator( '**' )"> ^ </button> </th>
+			<th>  <button onclick="addOperator( '**' )"> ** </button> </th>
 		</tr>
 	</table>
 	
