--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 			<th><button onclick="addDigit(8)"> 8 </button></th>
 			<th><button onclick="addDigit(9)"> 9 </button></th> 
 			<th> <button onclick="addOperator( '(' )"> ( </button></th>
-			<th>  <button onclick="addOperator( ')' )"> ) </button></th>
-			
+			<th>  <button onclick="addOperator( ')' )"> ) </button></th>		
 			<th> C </th>
 		</tr>
 		<tr>
@@ -25,9 +24,8 @@
 			<th><button onclick="addDigit(5)"> 5 </button></th>
 			<th><button onclick="addDigit(6)"> 6 </button></th> 
 			<th><button class="fa fa-arrow-left"></button></th>
-			<th> <button class="fa fa-arrow-right"></button> </th>
-			
-			<th> Del </th>
+			<th> <button class="fa fa-arrow-right"></button> </th>	
+			<th> <button onclick="deleteOne()"> Del </button> </th>
 		</tr>
 		<tr>
 			<th><button onclick="addDigit(1)"> 1 </button></th>
