--- a/index.html
+++ b/index.html
@@ -14,18 +14,16 @@
 		<tr>
 			<th><button onclick="addDigit(7)"> 7 </button></th>
 			<th><button onclick="addDigit(8)"> 8 </button></th>
-			<th><button onclick="addDigit(9)"> 9 </button></th> 
-			<th> <button onclick="addOperator( '(' )"> ( </button></th>
-			<th>  <button onclick="addOperator( ')' )"> ) </button></th>		
-			<th> C </th>
+			<th><button onclick="addDigit(9)"> 9 </button></th> 	
+			<th><button onclick="clearAll()">CE</button></th>
+			<th> <button onclick="deleteOne()"> Del </button> </th>
 		</tr>
 		<tr>
 			<th><button onclick="addDigit(4)"> 4 </button></th>
 			<th><button onclick="addDigit(5)"> 5 </button></th>
 			<th><button onclick="addDigit(6)"> 6 </button></th> 
-			<th><button class="fa fa-arrow-left"></button></th>
-			<th> <button class="fa fa-arrow-right"></button> </th>	
-			<th> <button onclick="deleteOne()"> Del </button> </th>
+			<th> <button onclick="equate()"> = </button> </th>
+			<th>  <button onclick="addOperator( '**' )"> ** </button> </th>
 		</tr>
 		<tr>
 			<th><button onclick="addDigit(1)"> 1 </button></th>
@@ -33,7 +31,7 @@
 			<th><button onclick="addDigit(3)"> 3 </button></th> 
 			<th> <button onclick="addOperator( '+' )"> + </button></th>
 			<th> <button onclick="addOperator( '-' )">  - </button></th>
-			<th> <button onclick="equate()"> = </button> </th>
+			
 		</tr>
 		<tr>
 			<th><button onclick="addDigit(0)"> 0 </button></th>
@@ -41,7 +39,7 @@
 			<th> <button onclick="changeSigns()"> +/- </button> </th> 
 			<th> <button onclick="addOperator( '*' )"> * </button></th>
 			<th> <button onclick="addOperator( '/' )"> / </button></th>
-			<th>  <button onclick="addOperator( '**' )"> ** </button> </th>
+			
 		</tr>
 	</table>
 	
