--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css.css" />
 </head>
  <body>
-	
+	<div id="calculatorBackground">
 	<div id="display"> </div>
 	
 	<table>
@@ -15,73 +15,35 @@
 			<th><button onclick="addDigit(7)"> 7 </button></th>
 			<th><button onclick="addDigit(8)"> 8 </button></th>
 			<th><button onclick="addDigit(9)"> 9 </button></th> 	
-			<th><button onclick="clearAll()">CE</button></th>
-			<th> <button onclick="deleteOne()"> Del </button> </th>
+			<th><button onclick="clearAll()" class="delete">CE</button></th>
+			<th> <button onclick="deleteOne()" class="delete"> Del </button> </th>
 		</tr>
 		<tr>
 			<th><button onclick="addDigit(4)"> 4 </button></th>
 			<th><button onclick="addDigit(5)"> 5 </button></th>
 			<th><button onclick="addDigit(6)"> 6 </button></th> 
-			<th> <button onclick="equate()"> = </button> </th>
-			<th>  <button onclick="addOperator( '**' )"> ** </button> </th>
+			<th> <button onclick="equate()" class="enter" > = </button> </th>
+			<th>  <button onclick="addOperator( '**' )" class="operator"> ** </button> </th>
 		</tr>
 		<tr>
 			<th><button onclick="addDigit(1)"> 1 </button></th>
 			<th><button onclick="addDigit(2)"> 2 </button></th>
 			<th><button onclick="addDigit(3)"> 3 </button></th> 
-			<th> <button onclick="addOperator( '+' )"> + </button></th>
-			<th> <button onclick="addOperator( '-' )">  - </button></th>
+			<th> <button onclick="addOperator( '+' )" class="operator"> + </button></th>
+			<th> <button onclick="addOperator( '-' )" class="operator">  - </button></th>
 			
 		</tr>
 		<tr>
 			<th><button onclick="addDigit(0)"> 0 </button></th>
 			<th> <button  onclick="addDecimal()">.</button> </th>
 			<th> <button onclick="changeSigns()"> +/- </button> </th> 
-			<th> <button onclick="addOperator( '*' )"> * </button></th>
-			<th> <button onclick="addOperator( '/' )"> / </button></th>
+			<th> <button onclick="addOperator( '*' )" class="operator"> * </button></th>
+			<th> <button onclick="addOperator( '/' )" class="operator"> / </button></th>
 			
 		</tr>
 	</table>
-	
-	
- <!--
-<div id="all">
-<p id="output">0</output>
+	</div>
 
-<div id="numbers">
-   <button onclick="addDigit(7)"> 7 </button>
-   <button onclick="addDigit(8)"> 8 </button>
-   <button onclick="addDigit(9)"> 9 </button>
-   <br />
-   <button onclick="addDigit(4)"> 4 </button>
-   <button onclick="addDigit(5)"> 5 </button>
-   <button onclick="addDigit(6)"> 6 </button>
-   <br />
-   <button onclick="addDigit(1)"> 1 </button>
-   <button onclick="addDigit(2)"> 2 </button>
-   <button onclick="addDigit(3)"> 3 </button>
-   <br />
-   <button onclick="addDigit(0)"> 0 </button>
-
-   <button onclick="makeNewNumberSpace('.')"> . </button>
-   <button onclick="makeNewNumberSpace('-')" > +/- </button>
-</div>
-<br />
-<div id="commands">
-<button onclick="makeNewNumberSpace('+')"> + </button>
-<button onclick="makeNewNumberSpace('-')"> - </button>
-<button onclick="makeNewNumberSpace('/')"> / </button>
-<button onclick="makeNewNumberSpace('*')"> * </button>
-</div>
-<br />
-<div id="clearAndEnter">
-<button onclick="getAnswer()"> Enter </button>
-<button onclick="clearAll()"> AC </button>
-<button onclick="clearCurrent()"> CE </button>
-<button onclick="del()"> Del </button>
-</div>
-</div>
- -->
  <script type="text/javascript" src=" https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
  <script type="text/javascript" src="data.js"></script>
