--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
 	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css.css" />
 </head>
+<nav> 
+	<div id="ad">
+      Calculator App by
+      <a href="https://codepen.io/CrumrineCoder/full/BmoRXw/" id="nic"> Nicolas Crumrine</span></a>
+    </div>
+</nav>
  <body>
 	<div id="calculatorBackground">
 	<div id="display"> </div>
