--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </nav>
  <body>
 	<div id="calculatorBackground">
+	<p style="font-size: .7em;"> Note: the +/-. button changes the current number's sign and does not act like a plus or minus sign like in other calculators. </p>
 	<div id="display"> </div>
 	
 	<table>
