--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
  <body>
 	<div id="calculatorBackground">
-	<p style="font-size: .7em;"> Note: the +/-. button changes the current number's sign and does not act like a plus or minus sign like in other calculators. </p>
+	<p style="font-size: .7em;"> Note: the +/-. button changes the current number's sign and does not act like a plus or minus sign like in other calculators. 0 is used as an empty number or to multiply numbers by 10, thus it's not avaliable to be multiplied like "9*0" or similar equations as they have no use.</p>
 	<div id="display"> </div>
 	
 	<table>
