Update portfolio link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <nav> 
 	<div id="ad">
       Calculator App by
-      <a href="https://crumrinecoder.github.io/Profile-Website-version2/" id="nic"> Nicolas Crumrine</span></a>
+      <a href="https://crumrinecoder.com" target="_blank" id="nic"> Nicolas Crumrine</span></a>
     </div>
 </nav>
  <script type="text/javascript" src=" https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
